# Mario-Forever-in-CPP

./: .gitignore  CMakeLists.txt  Mario Forever in C++.sln  Resource.rc  Resource.rc.in  Source.cpp  imgui.ini  level-zero.json  levelendtest.json  leveltest.json  lvl-test.txt  lvl-test2.json  lvl-test2.txt  lvl1.txt  resource.h  test_level_2.json  testcolor.json  untitled.json  vcpkg.json
.devcontainer/: devcontainer.json
Lib/libmodplug/lib/: modplug.lib
Lib/physfs/lib/: physfs-static.lib  physfs.lib
Mario Forever in C++/: Mario Forever in C++ - Copy.rc  Mario Forever in C++.rc  Mario Forever in C++.vcxproj  Mario Forever in C++.vcxproj.filters  RCb12864  Source.cpp  Texture.rc  main.cpp  mainlearning.cpp  resource - Copy.h  resource.h  vcpkg.json
Mario Forever in C++/data/levels/: lvl1.txt
Mario Forever in C++/data/musics/: LPChip - No Mercy [s13].s3m  p-switch.it
Mario Forever in C++/headers/: AnimationManager.hpp  Brick.hpp  BrickParticle.hpp  Coin.hpp  CoinEffect.hpp  Collide.hpp  Collision.hpp  Font.hpp  GoombaAI.hpp  GoombaAIEffect.hpp  Level.hpp  Loading.hpp  LocalAnimationManager.hpp  LuckyBlock.hpp  Mario.hpp  Obstacles.hpp  ScoreEffect.hpp  Slopes.hpp  Sound.hpp  Text.hpp  ThreadPool.hpp  WindowFrame.hpp  enum.hpp  sfMod.hpp
Mario Forever in C++/headers/Block/: Brick.hpp  LuckyBlock.hpp  Obstacles.hpp  Slopes.hpp
Mario Forever in C++/headers/Core/: Interpolation.hpp  Level.hpp  Music.hpp  MusicManager.hpp  Scroll.hpp  (+4 more)
Mario Forever in C++/levels/: lvl1.txt  lvl2.txt
Mario Forever in C++/sources/: AnimationManager.cpp  Bg.cpp  BgGradient.cpp  Brick.cpp  BrickParticle.cpp  Coin.cpp  CoinEffect.cpp  Collide.cpp  Collision.cpp  ExitGate.cpp  Font.cpp  GoombaAI.cpp  GoombaAIEffect.cpp  Interpolation.cpp  Level.cpp  Loading.cpp  LocalAnimationManager.cpp  LuckyBlock.cpp  Mario.cpp  MarioEffect.cpp  Music.cpp  MusicManager.cpp  Obstacles.cpp  PiranhaAI.cpp  ScoreEffect.cpp  Scroll.cpp  Slopes.cpp  Sound.cpp  SoundManager.cpp  Source.cpp  Spike.cpp  Text.cpp  TextureManager.cpp  ThreadPool.cpp  WindowFrame.cpp  sfMod.cpp
Resource_Build/: CMakeLists.txt  Resource_Build.cpp  Resource_Build.vcxproj  Resource_Build.vcxproj.filters
config/: config.h.in
data/levels/: gearuptest.json  leveltest.json  lvl1-test.txt  lvl1.txt  lvl2.txt  onedashthree.json  onedashtwo.json  sevendashone.json  sevendashthree.json  test.json  testlevel.json  twodashone.json  untitled-2.json  untitled.json
data/musics/: 1-Music-Die.it  p-switch.bak  p-switch.it  rainysum.mod
headers/Block/: Brick.hpp  BulletLauncher.hpp  CustomBlock.hpp  LuckyBlock.hpp  Obstacles.hpp  Slopes.hpp
headers/Class/: ActiveObjectClass.hpp  BroAIClass.hpp  BroAIEffectClass.hpp  BroAIProjectileClass.hpp  CoinEffectClass.hpp  CollisionObjectClass.hpp  FireballExplosionClass.hpp  GoombaAIClass.hpp  GoombaAIEffectClass.hpp  MarioProjectileClass.hpp  PiranhaAIClass.hpp  TextClass.hpp
headers/Core/: AnimationSequenceManager.hpp  AudioEngine.hpp  AutoScroll.hpp  Checkpoint.hpp  Common.hpp  Exception.hpp  Game.hpp  Hash.hpp  HitboxUtils.hpp  ImageManager.hpp  Input.hpp  Interpolation.hpp  JsonUtils.hpp  Level.hpp  Logging.hpp  Music.hpp  MusicManager.hpp  Profiler.hpp  RenderTileHash.hpp  Scene.hpp  SceneManager.hpp  Scroll.hpp  SimpleSprite.hpp  Sound.hpp  SoundManager.hpp  TextureManager.hpp  Tilemap.hpp  Time.hpp  Utility.hpp  WindowFrame.hpp
headers/Editor/: Editor.hpp  RenderTile.hpp  SelectTile.hpp  TabButton.hpp  TileProperty.hpp
headers/Effect/: BrickParticle.hpp  BroAIEffect.hpp  BulletBillEffect.hpp  CoinEffect.hpp  FireballExplosion.hpp  GoombaAIEffect.hpp  MarioEffect.hpp  ScoreEffect.hpp
headers/Object/: BroAI.hpp  BulletBill.hpp  BulletBillAI.hpp  Coin.hpp  ExitGate.hpp  GoombaAI.hpp  Mario.hpp  PiranhaAI.hpp  Platform.hpp  RotodiscAI.hpp  SceneryHelper.hpp  Spike.hpp
headers/Projectiles/: BroAIProjectile.hpp  MarioProjectile.hpp  PiranhaProjectile.hpp  ProjectileHelper.hpp
headers/Text/: Font.hpp  Text.hpp
levels/: lvl1.txt  lvl2.txt
musics/: hurricane_-_future.mod  map7.mod  xyce-dans_la_rue.xm
shaders/: not_shader.frag
sources/: AnimationManager.cpp  Bg.cpp  BgGradient.cpp  Brick.cpp  BrickParticle.cpp  BroAI.cpp  BroAIEffect.cpp  Coin.cpp  CoinEffect.cpp  Collide.cpp  ExitGate.cpp  FireballExplosion.cpp  Font.cpp  Game.cpp  GoombaAI.cpp  GoombaAIEffect.cpp  ImageManager.cpp  Interpolation.cpp  Level.cpp  Loading.cpp  LocalAnimationManager.cpp  LuckyBlock.cpp  Mario.cpp  MarioEffect.cpp  Music.cpp  MusicManager.cpp  Obstacles.cpp  PiranhaAI.cpp  Scene.cpp  ScoreEffect.cpp  Scroll.cpp  SimpleSprite.cpp  SingleAnimationObject.cpp  Slopes.cpp  Sound.cpp  SoundManager.cpp  Spike.cpp  StaticAnimationObject.cpp  Text.cpp  TextureManager.cpp  (+4 more)
sources/Block/: Brick.cpp  BulletLauncher.cpp  CustomBlock.cpp  LuckyBlock.cpp  Obstacles.cpp  Slopes.cpp
sources/Class/: ActiveObjectClass.cpp  BroAIClass.cpp  BroAIEffectClass.cpp  BroAIProjectileClass.cpp  CoinEffectClass.cpp  CollisionObjectClass.cpp  FireballExplosionClass.cpp  GoombaAIClass.cpp  GoombaAIEffectClass.cpp  MarioProjectileClass.cpp  PiranhaAIClass.cpp  TextClass.cpp
sources/Core/: AnimationSequenceManager.cpp  AudioEngine.cpp  AutoScroll.cpp  Checkpoint.cpp  Common.cpp  Game.cpp  HitboxUtils.cpp  ImageManager.cpp  Input.cpp  Interpolation.cpp  JsonUtils.cpp  Level.cpp  Logging.cpp  Music.cpp  MusicManager.cpp  Scene.cpp  SceneManager.cpp  Scroll.cpp  SimpleSprite.cpp  Sound.cpp  SoundManager.cpp  Tilemap.cpp  Time.cpp  Utility.cpp  WindowFrame.cpp
sources/Editor/: Editor.cpp  RenderTile.cpp  SelectTile.cpp  TabButton.cpp
sources/Effect/: BrickParticle.cpp  BroAIEffect.cpp  BulletBillEffect.cpp  CoinEffect.cpp  FireballExplosion.cpp  GoombaAIEffect.cpp  MarioEffect.cpp  ScoreEffect.cpp
sources/Object/: BroAI.cpp  BulletBill.cpp  BulletBillAI.cpp  Coin.cpp  ExitGate.cpp  GoombaAI.cpp  Mario.cpp  PiranhaAI.cpp  Platform.cpp  RotodiscAI.cpp  SceneryHelper.cpp  Spike.cpp
sources/Projectiles/: BroAIProjectile.cpp  MarioProjectile.cpp  PiranhaProjectile.cpp  ProjectileHelper.cpp
sources/Text/: Font.cpp  Text.cpp
(+318 files in other folders)
